fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,7 @@ article h2 {
 	font-style: italic;
 	font-weight: normal;
 	text-transform: none;
+	line-height: normal;
 	}
 
 body, select, input, textarea {color: #333;}
